Fixed misaligned image

--- a/src/client/app/player/view/channel/channel_list.less
+++ b/src/client/app/player/view/channel/channel_list.less
@@ -77,7 +77,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 42px;
+    max-width: 42px;
+    min-width: 42px;
     height: 100%;
 
     img{
